add router, add pages, add mobilemenu v0.1

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@
   scrollbar-width: thin;
 }
 
+@media (max-width: 768px) {
+  * {
+    scrollbar-width: none
+  }
+
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
