--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,21 @@
 :root {
+
+  /*theme*/
+  --principal-light: #d8d8d8;
+  --secondary-light: #383941;
+  --principal-dark: #09090b;
+  --secondary-dark: #cbcdd6;
+  --principal: #0891b2;
+  --bg-imgGray: #a7aab9;
+
+
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   color-scheme: light dark;
+
   color: rgba(255, 255, 255, 0.87);
-  background-color: #09090b;
+  /* background-color: #09090b; */
+  /* background-color: #c8c8c8; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,8 +30,9 @@
 }
 
 * {
-  scrollbar-color: #0891b2 #18181b;
+  scrollbar-color: #0891b2 transparent;
   scrollbar-width: thin;
+  scroll-behavior: smooth;
 }
 
 @media (max-width: 768px) {
