add offers section in homepage v1.3

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   --secondary-light: #383941;
   --principal-dark: #09090b;
   --secondary-dark: #cbcdd6;
+  /* --primary-dark: #0baed5;
+  --principal: #054858;
+  --principal: #087b97; */
   --principal: #0891b2;
   --bg-imgGray: #a7aab9;
 
